# cppSem2

./: CMakeLists.txt  Аффирмация.txt
BaseOOP/: GasHolder.cpp  SpacePort.cpp  Train.cpp
BaseSTL1/: Analyzer.cpp  Name.cpp  RatingTable.cpp
BaseSTL2/: AttackDetector.cpp  Telemetry.cpp  UserActivity.cpp  UserSessions.cpp  ZooAdvanced.cpp
Exceptions/: Brain.cpp  Connector.cpp  Storage.cpp
Inheritance1/: AdventurersV0.1.cpp  Resistance.cpp  Zoo.cpp
Inheritance2/: AdventurersV0.2.cpp  Namespace.cpp  Storage.cpp
MyContainers/: MyContainers.cpp  MyContainers.h
Operators/: Student.cpp  Vector2D.cpp  VectorND.cpp
Polymorphism/: AdventurersV0.3.cpp  Convoy.cpp  ConvoyBase.cpp  Predator.cpp
PracticeSTL/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp
Templates/: Dimensions.cpp  Minimum.cpp  TemplateStudent.cpp  TemplateVector2D.cpp
Test/: Exam.cpp  GasStation.cpp  MaxUnique.cpp  MixedRegister.cpp  MoneyBox.cpp  Sphere.cpp
